@@ -1,3 +1,8 @@
+2007-10-06 [colin]	3.0.2cvs23
+
+	* src/prefs_toolbar.c
+		Fix text reset; patch by Pawel
+
 2007-10-06 [colin]	3.0.2cvs22
 
 	* src/toolbar.h
